# rust-nlp-tools

./: README.md
language-codes/: Cargo.toml  build.rs
language-codes/data/: languages.txt  matching.txt
language-codes/src/: langdata.rs  languages.rs  lib.rs
language-tag-parser/: Cargo.toml
language-tag-parser/src/: lib.rs
language-tags/: Cargo.toml  build.rs
language-tags/src/: languages.rs  lib.rs
