[package]
name = "language-codes"
version = "0.1.0"
authors = ["Rob Speer <rob@luminoso.com>"]
license = "MIT"
build = "build.rs"

[build-dependencies]
phf_codegen = "*"
json = "*"
language-tag-parser = { path = "../language-tag-parser" }

[dependencies]
lazy_static = "*"
phf = "*"
language-tag-parser = { path = "../language-tag-parser" }
